multicode assets and details added

--- a/assets/css/demo/company/base.css
+++ b/assets/css/demo/company/base.css
@@ -23,7 +23,7 @@
 	--lqd-row-gutter-y: 20px;
 
 	--lqd-body-text-color: #5F6973;
-	--lqd-color-primary: #FFCD28;
+	--lqd-color-primary: #69c2b1;
 	--lqd-color-secondary: #194341;
 	--lqd-color-link: #5b7bfb;
 	--lqd-color-link-hover: #181b31;
